--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -1,4 +1,4 @@
 <link
-  href="https://fonts.googleapis.com/css2?family=Nunito&display=swap"
+  href="https://fonts.googleapis.com/css2?family=Nunito&family=Fira+Code&display=swap"
   rel="stylesheet"
 />
